Fix when search words MIU and MGG causing an error